--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "lodash": "^4.17.20",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "uuidv4": "^6.2.4"
   },
   "devDependencies": {
     "eslint": "^7.12.1"
